# MissRisk_RAG

./: .gitignore  CONTRIBUTING.md  MissRisk_RAG.md  README.md  pyproject.toml
agentic_mm_rag/: __init__.py  _compat.py
agentic_mm_rag/adapters/: __init__.py  base.py  generic.py  mmdocir.py  schemas.py
agentic_mm_rag/controller/: __init__.py  action_generator.py  answer_gate.py  observer.py  planner.py
agentic_mm_rag/memory/: __init__.py  cache.py  observation_trace.py
agentic_mm_rag/observation/: __init__.py  obligations.py  policy.py  report.py  risk.py  states.py  units.py
agentic_mm_rag/retrieval/: __init__.py  candidates.py
agentic_mm_rag/runtime/: __init__.py  events.py  runner.py  session.py  trace.py
agentic_mm_rag/sources/: __init__.py  base.py
agentic_mm_rag/tools/: __init__.py  base.py  registry.py
artifacts/server_results/: README.md  summary.json
configs/: pilot.yaml
docs/: interfaces.md  missriskbench_schema.md  roadmap.md
scripts/: README.md  build_mmdocrag_units.py  build_multimodalqa_units.py  build_slidevqa_units.py  common.py  eval_missrisk.py  generate_observation_states.py  label_detectability.py  train_answer_bearing.py  train_missrisk.py
scripts/baselines/: answer_bearing_lexical.py
scripts/eval/: audit_raw_mmdocrag.py  audit_submission.py  predictions.py
scripts/lib/: common.py  missrisk_common.py  missrisk_models.py
tests/: test_adapter_contracts.py  test_contracts_and_adapters.py  test_observation_contracts.py  test_observation_runtime.py  test_runtime_shell.py  test_scripts_importable.py  test_tool_registry.py
(+18 files in other folders)
